# androidlibcurl

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wr/jnidownload/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DownloadModule.cpp  DownloadModule.h  HttpPostModule.cpp  HttpPostModule.h  JNIUtil.cpp  JNIUtil.h  com_bingdu_cy_jnidemo_Hello.h  com_bingdu_cy_jnidemo_JniCurl.cpp  hello_jni.cpp  httprequest.cpp  httprequest.h  native-lib.cpp
app/src/main/java/com/wr/jnidownload/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wr/jnidownload/: ExampleUnitTest.java
